Sun Dec 19 10:43:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/QOS/Change_Receiver_FlowSpec/sender.cpp:
          Fixed compile error in unicode build

Sun Dec 19 01:32:05 2004  Emre Turkay  <turkaye@dre.vanderbilt.edu>

        * ace/config-win32-msvc.h:

          Added a if not defined guard to the QT_DLL definition.

Sat Dec 18 10:03:41 2004  Olli Savia  <ops@iki.fi>

        * ace/README:
          Added ACE_HAS_PREDEFINED_THREAD_CANCELLED_MACRO.

        * tests/Malloc_Test.cpp:
          There is no reason not to compile this test on LynxOS. It doesn't
          work but there are now better chances that it will be fixed some
          day.

Fri Dec 17 13:53:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS.inl:
          Corrected comment after #endif

Fri Dec 17 13:41:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_unistd.cpp:
          Converted ACE casts to C++ casts, removed the checks for win32 and
          vxworks for execlp, execle and execl, these methods are not
          implemented for any environment, so no need to have a special
          notsup for windows and vxworks

Fri Dec 17 13:19:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/IOStream_T.cpp:
          Removed code to define a variable to prevent munch problems. Not
          needed anymore with the latest VxWorks version and the static
          metioned is also gone already.

Fri Dec 17 12:47:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/IO_SAP.cpp:
          Just always build the code, the ACE_OS layer handles the not
          supported issues on Win32 and VxWorks.

Fri Dec 17 12:21:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS.h:
          Also on VxWorks include os_un.h

Fri Dec 17 11:31:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_sys_socket.inl: