@@ -92,7 +92,7 @@ const char *dscp_char[]=
   };
 
 int
-main(int argc , char *argv[])
+ACE_TMAIN (int argc , ACE_TCHAR *argv[])
 {
 
   if(argc != 3)
